# muninmail

./: .env.example  .gitignore  AZURE_AD_SETUP_GUIDE.md  DOCKER_README.md  EMAIL_USAGE_EXAMPLE.md  GMAIL_API_SETUP.md  OAUTH_SETUP.md  PROJECT_PLAN.md  README.md  docker-compose.yml  index.html  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  test_api.py  vite.config.js
.cursor/rules/: base.mdc
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  EMAIL_INGESTION_GUIDE.md  README.md  alembic.ini  env.example  muninmail.db  pyproject.toml  pytest.ini  queue_status.py  run_email_service.py  trigger_ingestion.py
backend/alembic/: env.py
backend/alembic/versions/: 18aaae814292_consolidate_email_summary_and_flags_.py  2bc8bae6ebf5_initial_migration_with_email_tables.py  ba5d071ac274_initial_muninmail_migration_with_tables.py
backend/docu/: ASYNCIO_EMAIL_SERVICE.md
backend/src/: api.py  api_models.py  celery_app.py  database.py  db_models.py  main.py  models.py  test_api.py
backend/src/ai_skills/: extract_todos.py  get_flags.py  summarize_email.py
backend/src/email_logic/: email_service.py
backend/src/models/: db_models.py
backend/src/services/: email_processor_service.py  email_service.py  run_email_service.py  todo_service.py
backend/src/skills/: __init__.py  extract_todos.py  get_flags.py  summarize.py  summarize_email.py
backend/src/tasks/: email_fetcher_task.py  email_processor_task.py  email_tasks.py  fetch_todos.py
backend/src/utils/: email_utils.py
frontend/: AI_CONFIG.md  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/src/ai/: client.ts  dev.ts
frontend/src/ai/flows/: email-chat-flow.ts  email-sentiment-analysis.ts  suggest-phrases.ts
frontend/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
frontend/src/app/compose/: page.tsx
frontend/src/app/inbox/: page.tsx
frontend/src/app/inbox/[emailId]/: page.tsx
frontend/src/components/chat/: chat-panel.tsx
frontend/src/components/emails/: email-composer.tsx  email-detail.tsx  email-list-item.tsx  email-list.tsx
frontend/src/components/layout/: app-header.tsx  app-sidebar.tsx  munin-mail-app-layout.tsx
frontend/src/components/theme/: theme-toggle-button.tsx
frontend/src/components/todos/: todos-panel.tsx
frontend/src/components/ui/: sidebar.tsx
frontend/src/lib/: email-service.ts  todo-service.ts  types.ts
public/: index.html
src/: App.css  App.jsx  index.css  qwen3_cerebras.py  qwen3_openrouter.py
src/backend/: api.py
src/backend/skills/: extract_todos.py  summarize.py
src/components/: AddEmailAccount.css  AddEmailAccount.jsx  EmailList.css  EmailList.jsx  LLMConfiguration.css  LLMConfiguration.jsx
src/main/: credentials.js  database.js  email-manager.js  llm-service.js  main.js  oauth.js  preload.js
src/main/email-providers/: BaseEmailProvider.js  GmailApiProvider.js  ImapSmtpProvider.js  OutlookGraphProvider.js  provider-configs.js
src/main/llm-providers/: llm-configs.js
src/smolagent_models/: qwen3_openrouter.py
