[project]
name = "cerebras-hackathon"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.5",
    "uvicorn>=0.34.2",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
    # Database dependencies
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    # Background task dependencies
    "celery>=5.3.0",
    "flower>=2.0.0",
    "redis>=5.0.0",
    # Additional utilities
    "python-dotenv>=1.0.0",
    "litellm>=1.71.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["src"]
python_paths = ["."]
addopts = "-v"
